--- a/trabajos.html
+++ b/trabajos.html
@@ -4,7 +4,147 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio - Trabajos</title>
-  <link rel="stylesheet" href="css/style.css">
+  <style>
+    /* Estilos generales */
+    body {
+      margin: 0;
+      font-family: 'Arial', sans-serif;
+      background: #f4f4f9;
+      color: #333;
+    }
+
+    /* Header */
+    header {
+      background: #1e1e2f;
+      color: #fff;
+      padding: 1rem 2rem;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      flex-wrap: wrap;
+    }
+
+    header .logo {
+      font-size: 1.5rem;
+      font-weight: bold;
+    }
+
+    nav a, nav button {
+      color: #fff;
+      text-decoration: none;
+      margin-left: 1rem;
+      padding: 0.5rem 1rem;
+      border: none;
+      background: none;
+      cursor: pointer;
+      font-size: 1rem;
+      transition: 0.3s;
+    }
+
+    nav a:hover, nav button:hover {
+      color: #f39c12;
+    }
+
+    /* Sección Trabajos */
+    .trabajos-section {
+      padding: 2rem;
+      max-width: 1000px;
+      margin: 0 auto;
+    }
+
+    .trabajos-section h1 {
+      text-align: center;
+      font-size: 2rem;
+      margin-bottom: 2rem;
+      color: #1e1e2f;
+    }
+
+    .trabajos-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
+      gap: 1.5rem;
+    }
+
+    .trabajo-card {
+      background: #fff;
+      padding: 1rem;
+      border-radius: 10px;
+      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+      word-wrap: break-word;
+    }
+
+    .trabajo-card h3 {
+      margin: 0 0 0.5rem 0;
+      font-size: 1.1rem;
+      color: #1e1e2f;
+    }
+
+    .trabajo-card a {
+      text-decoration: none;
+      color: #f39c12;
+      margin-top: 0.5rem;
+    }
+
+    /* Formulario subida de trabajos */
+    #uploadForm {
+      margin-top: 2rem;
+      display: flex;
+      flex-direction: column;
+      gap: 0.8rem;
+      max-width: 400px;
+      margin-left: auto;
+      margin-right: auto;
+    }
+
+    #uploadForm input, #uploadForm button {
+      padding: 0.7rem;
+      border-radius: 8px;
+      border: 1px solid #ccc;
+      font-size: 1rem;
+    }
+
+    #uploadForm button {
+      background: #1e1e2f;
+      color: #fff;
+      cursor: pointer;
+      border: none;
+      transition: 0.3s;
+    }
+
+    #uploadForm button:hover {
+      background: #f39c12;
+    }
+
+    /* Footer */
+    footer {
+      text-align: center;
+      padding: 1rem;
+      background: #1e1e2f;
+      color: #fff;
+      margin-top: 2rem;
+    }
+
+    /* Responsivo */
+    @media (max-width: 600px) {
+      header {
+        flex-direction: column;
+        align-items: flex-start;
+      }
+
+      nav {
+        margin-top: 0.5rem;
+        display: flex;
+        flex-direction: column;
+      }
+
+      nav a, nav button {
+        margin: 0.3rem 0;
+      }
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -26,8 +166,8 @@
     <div id="trabajosList" class="trabajos-grid"></div>
 
     <form id="uploadForm" style="display:none" onsubmit="event.preventDefault(); subirTrabajo();">
-      <input type="text" id="tituloTrabajo" placeholder="Título del trabajo">
-      <input type="file" id="archivoTrabajo">
+      <input type="text" id="tituloTrabajo" placeholder="Título del trabajo" required>
+      <input type="file" id="archivoTrabajo" required>
       <button type="submit">Subir Trabajo</button>
     </form>
   </section>
@@ -36,6 +176,61 @@
     <p>© 2025 William Mario Lázaro Iguavel | Diseñado en HTML, CSS y JS</p>
   </footer>
 
-  <script src="js/script.js"></script>
+  <script>
+    // Simular login de admin
+    function mostrarLogin() {
+      const password = prompt("Ingrese contraseña de administrador:");
+      if(password === "admin123") {
+        document.getElementById("uploadForm").style.display = "flex";
+        document.getElementById("btnLoginMenu").style.display = "none";
+        document.getElementById("btnLogoutMenu").style.display = "inline-block";
+      } else {
+        alert("Contraseña incorrecta");
+      }
+    }
+
+    function logout() {
+      document.getElementById("uploadForm").style.display = "none";
+      document.getElementById("btnLoginMenu").style.display = "inline-block";
+      document.getElementById("btnLogoutMenu").style.display = "none";
+    }
+
+    // Manejo de trabajos
+    const trabajosList = document.getElementById("trabajosList");
+    let trabajos = JSON.parse(localStorage.getItem("trabajos")) || [];
+
+    function mostrarTrabajos() {
+      trabajosList.innerHTML = "";
+      trabajos.forEach((t, index) => {
+        const div = document.createElement("div");
+        div.className = "trabajo-card";
+        div.innerHTML = `
+          <h3>${t.titulo}</h3>
+          <a href="${t.archivo}" download>Descargar</a>
+        `;
+        trabajosList.appendChild(div);
+      });
+    }
+
+    function subirTrabajo() {
+      const titulo = document.getElementById("tituloTrabajo").value;
+      const archivo = document.getElementById("archivoTrabajo").files[0];
+
+      if(!titulo || !archivo) return alert("Complete todos los campos");
+
+      const reader = new FileReader();
+      reader.onload = function(e) {
+        trabajos.push({ titulo: titulo, archivo: e.target.result });
+        localStorage.setItem("trabajos", JSON.stringify(trabajos));
+        mostrarTrabajos();
+        document.getElementById("uploadForm").reset();
+      };
+      reader.readAsDataURL(archivo);
+    }
+
+    // Mostrar al cargar
+    mostrarTrabajos();
+  </script>
 </body>
 </html>
+
