--- a/index.html
+++ b/index.html
@@ -161,7 +161,12 @@
 </head>
 <body>
   <header>
-    <h2 class="logo">Mi Portafolio</h2>
+    
+    <div class="logo">
+    <img src="img/upla.png" alt="Logo UPLA" class="logo-img">
+    <h2>UNIVERSIDAD PERUANA LOS ANDES</h2>
+  </div>
+    
     <nav>
       <a href="index.html">Inicio</a>
       <a href="habilidades.html">Habilidades</a>
