--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
   <header>
     
     <div class="logo">
-    <img src="img/upla.png" alt="Logo UPLA" class="logo-img">
+    <img src="img/logo.png" alt="Logo UPLA" class="logo-img">
     <h2>UNIVERSIDAD PERUANA LOS ANDES</h2>
   </div>
     
