--- a/index.html
+++ b/index.html
@@ -163,9 +163,10 @@
   <header>
     
     <div class="logo">
-    <img src="img/logo.png" alt="" class="logo-img">
-    <h2>UNIVERSIDAD PERUANA LOS ANDES</h2>
-  </div>
+  <img src="img/logo.png" alt="Logo UPLA" width="60" height="60">
+  <h2>UNIVERSIDAD PERUANA LOS ANDES</h2>
+</div>
+
     
     <nav>
       <a href="index.html">Inicio</a>
