--- a/educacion.html
+++ b/educacion.html
@@ -3,147 +3,103 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Educación</title>
-  <style>
-    /* Estilos generales */
-    body {
-      margin: 0;
-      font-family: 'Arial', sans-serif;
-      background: #f4f4f9;
-      color: #333;
-    }
-
-    /* Header */
-    header {
-      background: #1e1e2f;
-      color: #fff;
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-    }
-
-    header .logo {
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
-
-    nav a {
-      color: #fff;
-      text-decoration: none;
-      margin-left: 1rem;
-      transition: color 0.3s;
-    }
-
-    nav a:hover {
-      color: #f39c12;
-    }
-
-    /* Main / Sección educación */
-    main, section {
-      padding: 2rem;
-      max-width: 900px;
-      margin: 0 auto;
-    }
-
-    #education h2 {
-      text-align: center;
-      font-size: 2rem;
-      margin-bottom: 2rem;
-      color: #1e1e2f;
-    }
-
-    .timeline {
-      position: relative;
-      padding-left: 30px;
-      border-left: 3px solid #1e1e2f;
-    }
-
-    .timeline-item {
-      position: relative;
-      margin-bottom: 2rem;
-      padding-left: 20px;
-    }
-
-    .timeline-item::before {
-      content: '';
-      position: absolute;
-      left: -12px;
-      top: 0;
-      width: 20px;
-      height: 20px;
-      background-color: #f39c12;
-      border-radius: 50%;
-      border: 3px solid #1e1e2f;
-    }
-
-    .timeline-item h3 {
-      margin: 0;
-      color: #1e1e2f;
-    }
-
-    .timeline-item p {
-      margin: 0.3rem 0 0 0;
-      color: #555;
-    }
-
-    /* Footer */
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background: #1e1e2f;
-      color: #fff;
-      margin-top: 2rem;
-    }
-
-    /* Responsivo */
-    @media (max-width: 600px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      nav {
-        margin-top: 0.5rem;
-      }
-
-      nav a {
-        display: block;
-        margin: 0.3rem 0;
-      }
-    }
-  </style>
+  <title>Portafolio - Educación</title>
+  <link rel="stylesheet" href="css/index.css">
+  <link rel="stylesheet" href="css/educacion.css">
 </head>
 <body>
+
+  <!-- Header -->
   <header>
-    <h2 class="logo">Mi Portafolio</h2>
-    <nav>
+    <div class="logo">
+      <img src="img/logo.png" alt="Logo UPLA" width="60" height="60">
+      <h2>UPLA</h2>
+    </div>
+    <nav id="navMenu">
       <a href="index.html">Inicio</a>
       <a href="habilidades.html">Habilidades</a>
-      <a href="educacion.html">Educación</a>
+      <a href="educacion.html" class="active">Educación</a>
       <a href="trabajos.html">Trabajos</a>
       <a href="contacto.html">Contacto</a>
+      <button id="btnLoginMenu" onclick="mostrarLogin()">Ingresar</button>
+      <button id="btnLogoutMenu" onclick="logout()" style="display:none">Cerrar Sesión</button>
     </nav>
+    <div class="hamburger" onclick="toggleMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </header>
 
+  <!-- Sección Educación -->
   <section id="education">
-    <h2>Educación</h2>
+    <h2>Mi Educación</h2>
     <div class="timeline">
       <div class="timeline-item">
-        <h3>Universidad Peruana los Andes</h3>
-        <p>Ingeniería de Sistemas y Computación - 2022 / Presente</p>
+        <h3>Universidad Peruana Los Andes</h3>
+        <p class="subtitulo">Ingeniería de Sistemas y Computación - 2022 / Presente</p>
         <p>Participación en proyectos de desarrollo de software, bases de datos y aplicaciones web.</p>
       </div>
       <div class="timeline-item">
-        <h3>Cursos</h3>
-        <p>Certificaciones en Desarrollo Web y UX/UI</p>
+        <h3>Cursos y Certificaciones</h3>
+        <p class="subtitulo">Desarrollo Web y UX/UI</p>
         <p>Aprendizaje práctico de HTML, CSS, JavaScript, Node.js y diseño de interfaces centradas en el usuario.</p>
+      </div>
+      <div class="timeline-item">
+        <h3>Proyectos Personales</h3>
+        <p class="subtitulo">Portafolio y Aplicaciones Web</p>
+        <p>Desarrollo de proyectos personales que muestran habilidades en frontend y backend, usando tecnologías modernas.</p>
       </div>
     </div>
   </section>
 
+  <!-- Footer -->
   <footer>
-    <p>© 2025 Mi Portafolio</p>
+    <p>© 2025 William Mario Lázaro Iguavel | Diseñado en HTML, CSS y JS</p>
   </footer>
+
+  <!-- Scripts -->
+  <script>
+    function toggleMenu() {
+      document.getElementById("navMenu").classList.toggle("active");
+    }
+
+    function login() {
+      const user = document.getElementById("usuario")?.value;
+      const pass = document.getElementById("password")?.value;
+      const loginBox = document.querySelector(".login-box");
+      const msg = document.getElementById("loginMsg");
+
+      if(user === "admin" && pass === "1234") {
+        msg.style.color = "lightgreen";
+        msg.textContent = "¡Ingreso exitoso!";
+        loginBox?.classList.add("success");
+        setTimeout(() => {
+          loginBox.style.display = "none";
+          loginBox?.classList.remove("success");
+        }, 1500);
+        document.getElementById("btnLoginMenu").style.display = "none";
+        document.getElementById("btnLogoutMenu").style.display = "inline-block";
+      } else if(msg) {
+        msg.style.color = "red";
+        msg.textContent = "Usuario o contraseña incorrectos";
+        loginBox?.classList.remove("shake");
+        void loginBox?.offsetWidth;
+        loginBox?.classList.add("shake");
+      }
+    }
+
+    function logout() {
+      document.getElementById("btnLoginMenu").style.display = "inline-block";
+      document.getElementById("btnLogoutMenu").style.display = "none";
+      const loginBox = document.querySelector(".login-box");
+      if(loginBox) loginBox.style.display = "block";
+    }
+
+    function mostrarLogin() {
+      const loginBox = document.querySelector(".login-box");
+      if(loginBox) loginBox.style.display = "block";
+    }
+  </script>
 </body>
 </html>
