--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <header>
     <div class="logo">
       <img src="img/logo.png" alt="Logo UPLA">
-      <h2>Universidad Peruana los Andes</h2>
+      <h2>UPLA</h2>
     </div>
     <nav id="navMenu">
       <a href="index.html" class="active">Inicio</a>
