--- a/trabajos.html
+++ b/trabajos.html
@@ -4,165 +4,35 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio - Trabajos</title>
-  <style>
-    /* Estilos generales */
-    body {
-      margin: 0;
-      font-family: 'Arial', sans-serif;
-      background: #f4f4f9;
-      color: #333;
-    }
-
-    /* Header */
-    header {
-      background: #1e1e2f;
-      color: #fff;
-      padding: 1rem 2rem;
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      flex-wrap: wrap;
-    }
-
-    header .logo {
-      font-size: 1.5rem;
-      font-weight: bold;
-    }
-
-    nav a, nav button {
-      color: #fff;
-      text-decoration: none;
-      margin-left: 1rem;
-      padding: 0.5rem 1rem;
-      border: none;
-      background: none;
-      cursor: pointer;
-      font-size: 1rem;
-      transition: 0.3s;
-    }
-
-    nav a:hover, nav button:hover {
-      color: #f39c12;
-    }
-
-    /* Sección Trabajos */
-    .trabajos-section {
-      padding: 2rem;
-      max-width: 1000px;
-      margin: 0 auto;
-    }
-
-    .trabajos-section h1 {
-      text-align: center;
-      font-size: 2rem;
-      margin-bottom: 2rem;
-      color: #1e1e2f;
-    }
-
-    .trabajos-grid {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
-      gap: 1.5rem;
-    }
-
-    .trabajo-card {
-      background: #fff;
-      padding: 1rem;
-      border-radius: 10px;
-      box-shadow: 0 4px 6px rgba(0,0,0,0.1);
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-      word-wrap: break-word;
-    }
-
-    .trabajo-card h3 {
-      margin: 0 0 0.5rem 0;
-      font-size: 1.1rem;
-      color: #1e1e2f;
-    }
-
-    .trabajo-card a {
-      text-decoration: none;
-      color: #f39c12;
-      margin-top: 0.5rem;
-    }
-
-    /* Formulario subida de trabajos */
-    #uploadForm {
-      margin-top: 2rem;
-      display: flex;
-      flex-direction: column;
-      gap: 0.8rem;
-      max-width: 400px;
-      margin-left: auto;
-      margin-right: auto;
-    }
-
-    #uploadForm input, #uploadForm button {
-      padding: 0.7rem;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      font-size: 1rem;
-    }
-
-    #uploadForm button {
-      background: #1e1e2f;
-      color: #fff;
-      cursor: pointer;
-      border: none;
-      transition: 0.3s;
-    }
-
-    #uploadForm button:hover {
-      background: #f39c12;
-    }
-
-    /* Footer */
-    footer {
-      text-align: center;
-      padding: 1rem;
-      background: #1e1e2f;
-      color: #fff;
-      margin-top: 2rem;
-    }
-
-    /* Responsivo */
-    @media (max-width: 600px) {
-      header {
-        flex-direction: column;
-        align-items: flex-start;
-      }
-
-      nav {
-        margin-top: 0.5rem;
-        display: flex;
-        flex-direction: column;
-      }
-
-      nav a, nav button {
-        margin: 0.3rem 0;
-      }
-    }
-  </style>
+  
+  <link rel="stylesheet" href="css/trabajos.css">
 </head>
 <body>
+  <!-- Header -->
   <header>
-    <h2 class="logo">Mis Trabajos</h2>
-    <nav>
+    <div class="logo">
+      <img src="img/logo.png" alt="Logo UPLA" width="60" height="60">
+      <h2>UPLA</h2>
+    </div>
+    <nav id="navMenu">
       <a href="index.html">Inicio</a>
       <a href="habilidades.html">Habilidades</a>
       <a href="educacion.html">Educación</a>
-      <a href="trabajos.html">Trabajos</a>
+      <a href="trabajos.html" class="active">Trabajos</a>
       <a href="contacto.html">Contacto</a>
       <button id="btnLoginMenu" onclick="mostrarLogin()">Ingresar</button>
       <button id="btnLogoutMenu" onclick="logout()" style="display:none">Cerrar Sesión</button>
     </nav>
+    <div class="hamburger" onclick="toggleMenu()">
+      <span></span>
+      <span></span>
+      <span></span>
+    </div>
   </header>
 
+  <!-- Sección Trabajos -->
   <section class="trabajos-section">
-    <h1>Proyectos Realizados</h1>
-
+    <h2>Proyectos Realizados</h2>
     <div id="trabajosList" class="trabajos-grid"></div>
 
     <form id="uploadForm" style="display:none" onsubmit="event.preventDefault(); subirTrabajo();">
@@ -172,12 +42,12 @@
     </form>
   </section>
 
+  <!-- Footer -->
   <footer>
     <p>© 2025 William Mario Lázaro Iguavel | Diseñado en HTML, CSS y JS</p>
   </footer>
 
   <script>
-    // Simular login de admin
     function mostrarLogin() {
       const password = prompt("Ingrese contraseña de administrador:");
       if(password === "admin123") {
@@ -195,7 +65,6 @@
       document.getElementById("btnLogoutMenu").style.display = "none";
     }
 
-    // Manejo de trabajos
     const trabajosList = document.getElementById("trabajosList");
     let trabajos = JSON.parse(localStorage.getItem("trabajos")) || [];
 
@@ -228,9 +97,7 @@
       reader.readAsDataURL(archivo);
     }
 
-    // Mostrar al cargar
     mostrarTrabajos();
   </script>
 </body>
 </html>
-
