--- a/trabajos.html
+++ b/trabajos.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Portafolio - Trabajos</title>
-  
   <link rel="stylesheet" href="css/trabajos.css">
 </head>
 <body>
@@ -23,84 +22,41 @@
       <button id="btnLoginMenu" onclick="mostrarLogin()">Ingresar</button>
       <button id="btnLogoutMenu" onclick="logout()" style="display:none">Cerrar Sesión</button>
     </nav>
-    <div class="hamburger" onclick="toggleMenu()">
-      <span></span>
-      <span></span>
-      <span></span>
-    </div>
-  </header> <h1>📂 Mis Trabajos</h1>
-    <a href="index.html">⬅ Volver al Inicio</a>
   </header>
 
   <main class="contenedor-trabajos">
-    <!-- Trabajo 1 -->
-    <div class="tarjeta">
-      <h3>Informe de Arquitectura</h3>
-      <p>Documento sobre patrones arquitectónicos.</p>
-      <div class="acciones">
-        <a href="archivos/arquitectura.pdf" target="_blank">👁 Ver</a>
-        <a href="archivos/arquitectura.pdf" download>⬇ Descargar</a>
-      </div>
-    </div>
-
-    <!-- Trabajo 2 -->
-    <div class="tarjeta">
-      <h3>Presentación Redes</h3>
-      <p>Exposición de Packet Tracer.</p>
-      <div class="acciones">
-        <a href="archivos/redes.pptx" target="_blank">👁 Ver</a>
-        <a href="archivos/redes.pptx" download>⬇ Descargar</a>
-      </div>
-    </div>
-
-    <!-- Trabajo 3 -->
-    <div class="tarjeta">
-      <h3>Reporte Investigación</h3>
-      <p>Informe en Word sobre seguridad informática.</p>
-      <div class="acciones">
-        <a href="archivos/investigacion.docx" target="_blank">👁 Ver</a>
-        <a href="archivos/investigacion.docx" download>⬇ Descargar</a>
-      </div>
-    </div>
-  
-
-  <header>
     <h1>📂 Mis Trabajos</h1>
     <a href="index.html">⬅ Volver al Inicio</a>
-  </header>
 
-  <main class="contenedor-trabajos">
     <!-- Trabajo 1 -->
     <div class="tarjeta">
       <h3>SEMANA 01</h3>
       <p>Fundamentos Arquitectura - Mapa Conceptual</p>
       <div class="acciones">
-        <a href="archivos/Semana 01_MapaConceptual.pptx" target="_blank">👁 Ver</a>
-        <a href="archivos/Semana 01_MapaConceptual.pptx" download>⬇ Descargar</a>
+        <a href="archivos/Semana-01_Mapa-Conceptual.pptx" target="_blank">👁 Ver</a>
+        <a href="archivos/Semana-01_Mapa-Conceptual.pptx" download>⬇ Descargar</a>
       </div>
     </div>
 
     <!-- Trabajo 2 -->
     <div class="tarjeta">
       <h3>SEMANA 02</h3>
-      <p>Acrividad 01 - Analisis de Estandares</p>
+      <p>Actividad 01 - Análisis de Estándares</p>
       <div class="acciones">
-        <a href="archivos/Actividad 1_ Análisis de Estándares en un Proyecto Real  (1).pdf" target="_blank">👁 Ver</a>
-        <a href="archivos/Actividad 1_ Análisis de Estándares en un Proyecto Real  (1).pdf" download>⬇ Descargar</a>
+        <a href="archivos/Actividad-1_Analisis-de-Estandares.pdf" target="_blank">👁 Ver</a>
+        <a href="archivos/Actividad-1_Analisis-de-Estandares.pdf" download>⬇ Descargar</a>
       </div>
     </div>
 
     <!-- Trabajo 3 -->
     <div class="tarjeta">
-      <h3>Semana 02</h3>
-      <p>Actividad 01 - Actividad 02</p>
+      <h3>SEMANA 03</h3>
+      <p>Actividad 2 y 3 - Diseño de Arquitectura Basada en Estándares</p>
       <div class="acciones">
-        <a href="archivos/Actividad 1_ Análisis de Estándares en un Proyecto Real  (1).pdf" target="_blank">👁 Ver</a>
-        <a href="archivos/Actividad 2 y 3_ Diseño de una Arquitectura Basada en Estándares (Biblioteca Digital) (1).pdf" download>⬇ Descargar</a>
+        <a href="archivos/Actividad-2y3_Disenio-Arquitectura.pdf" target="_blank">👁 Ver</a>
+        <a href="archivos/Actividad-2y3_Disenio-Arquitectura.pdf" download>⬇ Descargar</a>
       </div>
     </div>
   </main>
-
-
 </body>
 </html>
