--- a/semana.html
+++ b/semana.html
@@ -55,8 +55,8 @@
   <div class="container">
     <div class="row">
       <div class="col-12 text-center fh5co-heading">
-        <h2>Archivos disponibles</h2>
-        <p>Aquí encontrarás los materiales y trabajos de la semana.</p>
+        <h2>Mis trabajos</h2>
+        
       </div>
     </div>
     <div class="image-gallery" id="listaArchivos">
