--- a/login.html
+++ b/login.html
@@ -11,17 +11,15 @@
   <div class="login-container">
     <h2 class="active-tab">Inicia sesión</h2>
 
-    <form id="login-" class="login-form">
+    <form id="login-form" class="login-form">
       <div class="input-group">
         <input type="text" id="username" placeholder="Correo o usuario" required>
       </div>
 
       <div class="password-group">
-  <input type="password" id="password" placeholder="Contraseña" required>
-  <span class="toggle-password">👁️</span>
-  <br>
-</div>
-
+        <input type="password" id="password" placeholder="Contraseña" required>
+        <span class="toggle-password">👁️</span>
+      </div>
 
       <p class="forgot">
         <a href="#" id="forgot-link">¿Has olvidado tu contraseña?</a>
@@ -41,7 +39,6 @@
       </div>
     </form>
 
-    <!-- 🔹 Botón para volver al inicio -->
     <a href="index.html" class="back-btn">← Volver al inicio</a>
   </div>
 
@@ -49,3 +46,4 @@
   <script src="js/ui-login.js"></script>
 </body>
 </html>
+
